<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/tblr.equationbalancer"
    android:id="@+id/RelativeLayout1"
    android:layout_width="250dp"
    android:layout_height="400dp"
    android:background="@drawable/numpad_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="left"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:text="@string/instruction"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="24dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/instruction"
        android:background="@drawable/button"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/instruction"
        android:background="@drawable/num_text"
		 >

        <ImageView
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:scaleType="fitCenter"
            android:src="@drawable/negative2x" />

        <TextView
            android:id="@+id/numText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="40sp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:layout_marginRight="10dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="10dp" >

            <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <Button
                android:id="@+id/one"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/button"
                android:onClick="setNum"
                android:text="@string/one"
				android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textColor="@android:color/white"
                android:text="   "
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/two"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/button"
                android:onClick="setNum"
                android:text="@string/two"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="   " />

            <Button
                android:id="@+id/three"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/button"
                android:onClick="setNum"
                android:text="@string/three"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <Button
                android:id="@+id/four"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/button"
                android:onClick="setNum"
                android:text="@string/four"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/five"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/button"
                android:onClick="setNum"
                android:text="@string/five"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/six"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/button"
                android:onClick="setNum"
                android:text="@string/six"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <Button
                android:id="@+id/seven"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/button"
                android:onClick="setNum"
                android:text="@string/seven"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/eight"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/button"
                android:onClick="setNum"
                android:text="@string/eight"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/nine"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/button"
                android:onClick="setNum"
                android:text="@string/nine"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:padding="5dp">

            <Button
                android:id="@+id/zero"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/button"
                android:onClick="setNum"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/okaybtn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@drawable/okay_btn"
                android:textColor="@android:color/white"
                android:layout_span="3"
                 android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/okay" />
        </TableRow>
    </TableLayout>

</RelativeLayout>